# clangir

./: README.md
clang-tools-extra/clang-tidy/cir/: CMakeLists.txt
clang/include/clang/CIR/: CIRToCIRPasses.h  StdLibStatistics.h
clang/include/clang/CIR/Dialect/: Passes.h  Passes.td
clang/include/clang/CIR/Dialect/IR/: CIROps.td  CIRStdOps.td  CIRTypeConstraints.td
clang/include/clang/CIR/Interfaces/: ASTAttrInterfaces.td
clang/include/clang/Driver/: Options.td
clang/include/clang/Frontend/: FrontendOptions.h
clang/lib/CIR/CodeGen/: CIRGenBuilder.h  CIRGenExprAgg.cpp  CIRGenModule.cpp  CIRGenModule.h  CIRGenStatistics.cpp  CIRGenStatistics.h  CIRPasses.cpp  CMakeLists.txt
clang/lib/CIR/Dialect/IR/: CIRAttrs.cpp  CIRDialect.cpp
clang/lib/CIR/Dialect/Transforms/: ABILowering.cpp  CMakeLists.txt  HoistAllocas.cpp  IdiomRecognizer.cpp  LibOpt.cpp  LifetimeCheck.cpp  LiveObjectAnalysis.cpp  LiveObjectAnalysis.h  LoweringPrepare.cpp  MoveOpt.cpp  MoveOpt.h  PointsToAnalysis.cpp  PointsToAnalysis.h  StdLibStatistics.cpp
clang/lib/CIR/Dialect/Transforms/TargetLowering/: ItaniumCXXABI.cpp
clang/lib/CIR/FrontendAction/: CIRGenAction.cpp
clang/lib/CIR/Interfaces/: CMakeLists.txt
clang/lib/CIR/Lowering/DirectToLLVM/: LowerToLLVM.cpp  LowerToLLVM.h
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/test/CIR/CodeGen/: const-alloca.cpp  dynamic-cast-exact.cpp
clang/tools/cir-opt/: cir-opt.cpp
